--- a/templates/article/detail.html
+++ b/templates/article/detail.html
@@ -16,7 +16,7 @@
 <!-- 文章详情 -->
 <div class="container">
     <div class="row">
-
+        
         <div class="col-9">
             <!-- 标题及作者 -->
             <h1 class="mt-4 mb-4">{{ article.title }}</h1>
@@ -37,17 +37,14 @@
                     {# 时间：{{ article.created|date:"Y-m-d H:i:s" }} #}
                 </div>
             </div>
-        </div>
 
-        <!-- 文章正文 -->
-        <div class="col-9">
-            {# 不进行转义 #}
-            <p>{{ article.body|safe }}</p>
-        </div>
+            <!-- 文章正文 -->
+            <div class="col-12">
+                {# 不进行转义 #}
+                <p>{{ article.body|safe }}</p>
+            </div>
 
-
-        <!-- 文章点赞按钮 -->
-        <div class="col-9">
+            <!-- 文章点赞按钮 -->
             <div style="text-align:center;" class="mt-4">
                 <button class="btn btn-outline-danger" type="button" onclick="validate_is_like(
                      '{% url 'article:increase_likes' article.id %}',
@@ -63,18 +60,130 @@
                     </span>
                 </button>
             </div>
+
+            {# 新增一个隐藏的表单，用于安全删除文章 #}
+            <form style="display:none;" id="safe_delete" action="{% url 'article:article_safe_delete' article.id %}"
+                method="POST">
+                {% csrf_token %}
+                <button type="submit">发送</button>
+            </form>
+
+            <!-- 发表评论 -->
+            <div>
+                <hr>
+                {% if user.is_authenticated %}
+                <form action="{% url 'comment:post_comment' article.id %}" method="POST">
+                    {% csrf_token %}
+                    <div class="form-group">
+                        <label for="body">
+                            <strong>
+                                我也要发言：
+                            </strong>
+                        </label>
+                        <!-- <textarea type="text" class="form-control" id="body" name="body" rows="2"></textarea> -->
+                        <!-- 修改评论的正文表单，使用富文本 -->
+                        <div>
+                            {{ comment_form.media }}
+                            {{ comment_form.body }}
+                        </div>
+                    </div>
+                    <!-- 提交按钮 -->
+                    <button type="submit" class="btn btn-primary ">发送</button>
+                </form>
+                <br>
+                {% else %}
+                <br>
+                <h5 class="row justify-content-center">
+                    请<a href="{% url 'userprofile:login' %}">登录</a>后评论
+                </h5>
+                <br>
+                {% endif %}
+            </div>
+
+            <!-- 显示评论 -->
+            <div class="col-12">
+                <br>
+                {% load mptt_tags %}
+                <h4>共有{{ comments.count }}条评论</h4>
+                <div class="row">
+                    {# 遍历树形结构，相当于 for node in comments #}
+                    {% recursetree comments %}
+                    {# 给 node 取个别名 comment #}
+                    {% with comment=node %}
+                    <div class="{% if comment.reply_to %}
+                        offset-1 col-11
+                        {% else %}
+                        col-12
+                        {% endif %}" id="comment_elem_{{ comment.id }}">
+                        <hr>
+                        <p>
+                            <strong style=" color: pink">
+                                {{ comment.user }}
+                            </strong>
+
+                            {% if comment.reply_to %}
+                            <i class="far fa-arrow-alt-circle-right" style="color: cornflowerblue;"></i>
+                            <strong style="color: pink">
+                                {{ comment.reply_to }}
+                            </strong>
+                            {% endif %}
+
+                        </p>
+                        <div>{{ comment.body|safe }}</div>
+                        <div>
+                            <span style="color: gray">
+                                {{ comment.created|date:"Y-m-d H:i" }}
+                            </span>
+
+                            {% comment %}
+                            <!-- 加载 modal 的按钮 -->
+                            {% if user.is_authenticated %}
+                            <button type="button" class="btn btn-light btn-sm text-muted"
+                                onclick="load_modal({{ article.id }}, {{ comment.id }})">
+                                回复
+                            </button>
+                            {% else %}
+                            <a class="btn btn-light btn-sm text-muted" href="{% url 'userprofile:login' %}">
+                                回复
+                            </a>
+                            {% endif %}
+                            {% endcomment %}
+                        </div>
+
+                        <!-- Modal -->
+                        <div class="modal fade" id="comment_{{ comment.id }}" tabindex="-1" role="dialog"
+                            aria-labelledby="CommentModalCenter" aria-hidden="true">
+                            <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+                                <div class="modal-content" style="height: 480px">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalCenterTitle">回复 {{ comment.user }}：</h5>
+                                    </div>
+                                    <div class="modal-body" id="modal_body_{{ comment.id }}"></div>
+                                </div>
+
+                            </div>
+                        </div>
+
+                        {% if not comment.is_leaf_node %}
+                        <div class="children">
+                            {{ children }}
+                        </div>
+                        {% endif %}
+                    </div>
+                    {% endwith %}
+                    {% endrecursetree %}
+                </div>
+            </div>
         </div>
 
         <!-- 正文目录，使用粘性侧边栏 -->
-        <div class="col-3  mt-4">
-            <div id="sidebar" class="sidebar">
-                <div class="sidebar__inner">
-                    <h4><strong>目录</strong></h4>
-                    <hr>
-                    <div>
-                        {# django过滤器，不对变量的内容进行转义 #}
-                        {{ toc|safe }}
-                    </div>
+        <div class="sidebar col-3  mt-4" id="sidebar">
+            <div class="sidebar__inner">
+                <h4><strong>目录</strong></h4>
+                <hr>
+                <div>
+                    {# django过滤器，不对变量的内容进行转义 #}
+                    {{ toc|safe }}
                 </div>
             </div>
         </div>
@@ -91,126 +200,6 @@
             }
         </style>
 
-        {# 新增一个隐藏的表单，用于安全删除文章 #}
-        <form style="display:none;" id="safe_delete" action="{% url 'article:article_safe_delete' article.id %}"
-            method="POST">
-            {% csrf_token %}
-            <button type="submit">发送</button>
-        </form>
-
-        <!-- 文章正文 -->
-        <!-- <div class="col-9">
-            {# 不进行转义 #}
-            <p>{{ article.body|safe }}</p>
-        </div> -->
-
-        <!-- 发表评论 -->
-        <div class="col-9">
-            <hr>
-            {% if user.is_authenticated %}
-            <form action="{% url 'comment:post_comment' article.id %}" method="POST">
-                {% csrf_token %}
-                <div class="form-group">
-                    <label for="body">
-                        <strong>
-                            我也要发言：
-                        </strong>
-                    </label>
-                    <!-- <textarea type="text" class="form-control" id="body" name="body" rows="2"></textarea> -->
-                    <!-- 修改评论的正文表单，使用富文本 -->
-                    <div>
-                        {{ comment_form.media }}
-                        {{ comment_form.body }}
-                    </div>
-                </div>
-                <!-- 提交按钮 -->
-                <button type="submit" class="btn btn-primary ">发送</button>
-            </form>
-            <br>
-            {% else %}
-            <br>
-            <h5 class="row justify-content-center">
-                请<a href="{% url 'userprofile:login' %}">登录</a>后评论
-            </h5>
-            <br>
-            {% endif %}
-        </div>
-
-        <!-- 显示评论 -->
-        <div class="col-12">
-            <br>
-            {% load mptt_tags %}
-            <h4>共有{{ comments.count }}条评论</h4>
-            <div class="row">
-                {# 遍历树形结构，相当于 for node in comments #}
-                {% recursetree comments %}
-                {# 给 node 取个别名 comment #}
-                {% with comment=node %}
-                <div class="{% if comment.reply_to %}
-                        offset-1 col-11
-                        {% else %}
-                        col-12
-                        {% endif %}" id="comment_elem_{{ comment.id }}">
-                    <hr>
-                    <p>
-                        <strong style=" color: pink">
-                            {{ comment.user }}
-                        </strong>
-
-                        {% if comment.reply_to %}
-                        <i class="far fa-arrow-alt-circle-right" style="color: cornflowerblue;"></i>
-                        <strong style="color: pink">
-                            {{ comment.reply_to }}
-                        </strong>
-                        {% endif %}
-
-                    </p>
-                    <div>{{ comment.body|safe }}</div>
-                    <div>
-                        <span style="color: gray">
-                            {{ comment.created|date:"Y-m-d H:i" }}
-                        </span>
-
-                        {% comment %}
-                        <!-- 加载 modal 的按钮 -->
-                        {% if user.is_authenticated %}
-                        <button type="button" class="btn btn-light btn-sm text-muted"
-                            onclick="load_modal({{ article.id }}, {{ comment.id }})">
-                            回复
-                        </button>
-                        {% else %}
-                        <a class="btn btn-light btn-sm text-muted" href="{% url 'userprofile:login' %}">
-                            回复
-                        </a>
-                        {% endif %}
-                        {% endcomment %}
-                    </div>
-
-                    <!-- Modal -->
-                    <div class="modal fade" id="comment_{{ comment.id }}" tabindex="-1" role="dialog"
-                        aria-labelledby="CommentModalCenter" aria-hidden="true">
-                        <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
-                            <div class="modal-content" style="height: 480px">
-                                <div class="modal-header">
-                                    <h5 class="modal-title" id="exampleModalCenterTitle">回复 {{ comment.user }}：</h5>
-                                </div>
-                                <div class="modal-body" id="modal_body_{{ comment.id }}"></div>
-                            </div>
-
-                        </div>
-                    </div>
-
-                    {% if not comment.is_leaf_node %}
-                    <div class="children">
-                        {{ children }}
-                    </div>
-                    {% endif %}
-                </div>
-                {% endwith %}
-                {% endrecursetree %}
-            </div>
-        </div>
-
     </div>
 </div>
 
@@ -219,10 +208,11 @@
 
 
 {% block script %}
-<!-- 引入粘性侧边栏 -->
-<script src="{% static 'sticky_sidebar/jquery.sticky-sidebar.min.js' %}"></script>
 <!-- csrf token -->
 <script src="{% static 'csrf.js' %}"></script>
+
+<!-- 引入粘性侧边栏 -->
+<script src="{% static 'sticky_sidebar/jquery.sticky-sidebar.min.js' %}"></script>
 <script type="text/javascript">
     $('#sidebar').stickySidebar({
         topSpacing: 20,
